box shadow fixed and featured hidden on mobile

--- a/powo-portal/src/main/frontend/src/sass/pages/_home.scss
+++ b/powo-portal/src/main/frontend/src/sass/pages/_home.scss
@@ -80,11 +80,14 @@
     position: relative;
     height: 80vh;
     .featured {
-      display: block;
-      color: $White;
-      position: absolute;
-      bottom: 0;
-      right: 0;
+      @media (min-width: $screen-sm-min) {
+        display: block;
+        color: $White;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+      }
+      display: none;
       a {
         color: $White
       }
